--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <p class="about-us-content ">NayaNayan is an organization determined towards bringing the change by promoting the right sex education, fighting the rape culture, spreading the awareness on various type of cancers and escalating the importance of mental
                                     health.
                                 </p>
-                                <h5 class="text-center" style="font-style: italic; ">As often our education system fails to do so.</h5><br>
+                                <h5 class="text-center" style="text-transform: uppercase; ">As often our education system fails to do so.</h5><br>
                             </div><br>
 
 
@@ -234,6 +234,7 @@
 
 
 
+    
     <div class="meet-team ">
         <h1>Meet Our Team</h1>
         <p>Take a look at our innovative and passionate team</p>
@@ -261,7 +262,8 @@
                     </div>
                     <div class="flip-card-back ">
                         <h2>CO-FOUNDER</h2>
-                        <p>QUALIFICATION: BBA</p>
+                        <p>QUALIFICATION: Senior Secondary<br>B.Com
+                        </p>
                     </div>
                 </div>
             </div>
@@ -272,7 +274,7 @@
                     </div>
                     <div class="flip-card-back ">
                         <h2>FINANCE DEPARTMENT </h2>
-                        <p>QUALIFICATION: BTech(CS), BSc(IT)</p>
+                        <p>QUALIFICATION: B.Com</p>
                     </div>
                 </div>
             </div>
@@ -283,7 +285,12 @@
                     </div>
                     <div class="flip-card-back ">
                         <h2>DESIGNING TEAM</h2>
-                        <p>QUALIFICATION: BTech(CS), BSc(IT)</p>
+                        <p>
+                            QUALIFICATION: Senior Secondary<br>
+                        B.Tech(CS)<br>
+                        B.E(IT)
+                            
+                    </p>
                     </div>
                 </div>
             </div>
@@ -301,8 +308,6 @@
                     <div class="flip-card-back ">
                         <h2>TECHNICAL TEAM</h2>
                         <p>QUALIFICATION: BTech(CS), BSc(IT)</p>
-
-
                     </div>
                 </div>
             </div>
@@ -313,7 +318,8 @@
                     </div>
                     <div class="flip-card-back ">
                         <h2>MARKETING TEAM</h2>
-                        <p>QUALIFICATION: BTech(CS), BSc(IT)</p>
+                        <p>QUALIFICATION: Senior Secondary<br>
+                            B.Com</p>
                     </div>
                 </div>
             </div>
@@ -324,7 +330,9 @@
                     </div>
                     <div class="flip-card-back ">
                         <h2>HR TEAM</h2>
-                        <p>QUALIFICATION: BTech(CS), BSc(IT)</p>
+                        <p>QUALIFICATION: hospitality Graduate<br>
+                        B.Com(CA)<br>B.Tech(CS)
+                    </p>
                     </div>
                 </div>
             </div>
@@ -336,6 +344,9 @@
 
                     <div class="flip-card-back ">
                         <h2>RESEARCH TEAM</h2>
+                        <p>QUALIFICATION: BBA<br>
+                            Physcology<br>B.Com(CA)
+                        </p>
                     </div>
                 </div>
             </div>
@@ -430,10 +441,10 @@
 
 
     <!-- our team end -->
-    <div class=" blog-container " id="blogs ">
+    <div class=" blog-container " id="blogs">
         <div class="container ">
-            <h1 style="font-size: 2.5rem; font-weight: 650; ">
-                BLOGS
+            <h1>
+                Blogs
             </h1>
             <div class="col-md-12 ">
                 <h2 style="text-align: center; ">Alice in Wonderland, part dos</h2>
@@ -486,6 +497,12 @@
             }
         }
     </script>
+
+
+
+
+
+
 
 
 
@@ -754,12 +771,10 @@
     <!-- faq ending -->
     <!-- contact us starting -->
 
-
-
-    <section class="contact-us " id="contact ">
+    <section class="contact-us " id="contact">
 
         <!--Section heading-->
-        <h2 class="h1-responsive font-weight-bold text-center my-4 ">Contact us</h2>
+        <h1 class="h1-responsive font-weight-bold text-center my-4 " style="font-size:2.5rem; font-weight: bold;">Contact Us</h1>
         <!--Section description-->
         <p class="text-center w-responsive mx-auto mb-5 ">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within a matter of hours to help you.</p>
 
@@ -822,7 +837,7 @@
                 </form>
 
                 <div class="text-center text-md-left send-btn ">
-                    <a class="btn btn-primary " onclick="document.getElementById( 'contact-form').submit(); ">Send</a>
+                    <a class="btn btn-primary " onclick="document.getElementById( 'contact-form').submit(); " style="background-color: black;">Send</a>
                 </div>
                 <div class="status "></div>
             </div>
