--- a/joinus.html
+++ b/joinus.html
@@ -29,9 +29,9 @@
         <div class="collapse navbar-collapse nav-div " id="navbarSupportedContent">
             <ul class="list-non-bullet navbar-nav  ml-auto">
                 <li class="list-item-inline nav-item active"> <a class="nav-link link link-active" href="index.html">Home</a></li>
-                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="#about">About us</a></li>
-                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="#blogs">Blogs</a></li>
-                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="#contact">Contact Us</a></li>
+                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="index.html#about">About us</a></li>
+                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="index.html#blogs">Blogs</a></li>
+                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="index.html#contact">Contact Us</a></li>
                 <li class="list-item-inline nav-item active"> <a class="nav-link link" href="donate.html">Donate Now</a></li>
 
                 <!-- <form target="_blank" class="list-item-inline" action="https://docs.google.com/forms/d/e/1FAIpQLSdj-zuwa7jupBrHVjOaJwiqMCL12wdDeT_7d-w-D85L0dFBow/viewform"> -->
