--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="brand-name navbar-brand">
-            <img src="./imgs/logo.svg" width="80px" height="80px" alt=""> NayaNayan
+            <img src="./imgs/logofinal.png" width="80px" height="80px" alt=""> NayaNayan
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
