--- a/donate.html
+++ b/donate.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="css/rotating-card.css" rel="stylesheet" />
-    <link rel="icon" href="imgs/Copy of LOGO OF NAYA NAYAN.svg">
+    <link rel="icon" href="imgs/logofinal.png">
 
 </head>
 
@@ -18,7 +18,7 @@
     <!-- navbar starting -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="brand-name navbar-brand">
-            <img src="./imgs/logo.svg" width="80px" height="80px" alt=""> NayaNayan
+            <img src="./imgs/logofinal.png" width="60px" height="60px" alt=""> NayaNayan
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
