--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
 
             <!--Grid column-->
             <div class="col-md-9 mb-md-0 mb-5 ">
-                <form id="contact-form " name="contact-form " action="/ " method="POST ">
+                <form id="contact-form " name="contact-form " action="POST" data-netlify="true">
 
                     <!--Grid row-->
                     <div class="row ">
@@ -852,6 +852,7 @@
                             </div>
                         </div>
                         <!--Grid column-->
+
 
                     </div>
                     <!--Grid row-->
@@ -881,6 +882,7 @@
                         </div>
                     </div>
                     <!--Grid row-->
+                    <div data-netlify-recaptcha="true"></div>
 
                 </form>
 
