--- a/index.html
+++ b/index.html
@@ -883,13 +883,14 @@
                     </div>
                     <!--Grid row-->
                     <div data-netlify-recaptcha="true"></div>
+                    <div class="text-center text-md-left send-btn ">
+                        <a class="btn btn-primary " onclick="document.getElementById( 'contact-form').submit(); " style="background-color: black;" type="submit">Send</a>
+                    </div>
 
                 </form>
 
-                <div class="text-center text-md-left send-btn ">
-                    <a class="btn btn-primary " onclick="document.getElementById( 'contact-form').submit(); " style="background-color: black;">Send</a>
-                </div>
-                <div class="status "></div>
+
+                <!-- <div class="status "></div> -->
             </div>
             <!--Grid column-->
 
